# dsa-implementation

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml
src/: attacks.py  dsa.py  main.py
src/utils/: dsa_utils.py
tests/: test_attacks.py  test_dsa.py  test_dsa_utils.py
