[project]
name = "dsa digital signature"
version = "1.0.0"
description = "A DSA implementation with attack's example"
authors = [
    { name = "Antonio Marques", email = "a48276@alunos.isel.pt" },
    { name = "Danilo Vieira", email = "a49988@alunos.isel.pt" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

dependencies = [
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "sympy==1.14.0"
]


[tool.pytest.ini_options]
pythonpath = ["src"]
